--- a/register/header.html
+++ b/register/header.html
@@ -14,6 +14,7 @@
     <link href="../assets/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../Style/chosen.css" /><!-- Important for searhable dropdwn-->
     <link rel="stylesheet" href="../register/css/style.css">
+
     <!--load fontawesome cdn-->
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
@@ -146,8 +147,7 @@
                             </a>
                             <ul class="list-unstyled">
                                 <li><a href="./add.html" target="_self">New User</a></li>
-                                <li><a href="#" target="_self">User List</a></li>
-                                <li><a href="#" target="_self">Roles List</a></li>
+                                <li><a href="./ulist.html" target="_self">User List</a></li>
                             </ul>
                         </li>
 
@@ -198,7 +198,6 @@
     <script src="../plugins/switchery/switchery.min.js"></script>
     <script src="../assets/js/jquery.core.js"></script>
     <script src="../assets/js/modernizr.min.js"></script>
-    <script src="../register/js/app.js"></script>
     <script>
         var resizefunc = [];
     </script>
