--- a/register/add.html
+++ b/register/add.html
@@ -162,6 +162,8 @@
 
                                     &nbsp;
                                     <li class="breadcrumb-item"><a href="./add.html">Add User</a></li>
+                                    &nbsp;
+                                    <li class="breadcrumb-item"><a href="./ulist.html">List of Users</a></li>
 
                                 </ol>
                                 <div class="clearfix"></div>
@@ -268,6 +270,8 @@
         <!-- End footer -->
     </div>
     <!-- END wrapper -->
+    <script src="../register/js/app.js"></script>
+
 </body>
 
 </html>
