--- a/register/amend.html
+++ b/register/amend.html
@@ -34,7 +34,12 @@
             $("#footer").load("footer.html");
         });
     </script>
-
+<style>
+    #userdd{
+        width: 100%;
+        height: 50px !important;
+    }
+</style>
 </head>
 
 <body class="fixed-left">
@@ -155,6 +160,9 @@
                                     </asp:Label>
                                 </h4>
                                 <ol class="breadcrumb float-right">
+                                    User Name:&nbsp;&nbsp;
+                                    <input type="text" name="username" id="username" autocomplete="off" disabled
+                                    style="width: auto; border-radius: 5px; border-width: 0ex;color: red; font-family: initial;">
                                     <li class="breadcrumb-item"><a href="./import.html">Import</a></li>
                                     &nbsp;
                                     <li class="breadcrumb-item"><a href="./amend.html">Amend
@@ -162,6 +170,8 @@
 
                                     &nbsp;
                                     <li class="breadcrumb-item"><a href="./add.html">Add User</a></li>
+                                    &nbsp;
+                                    <li class="breadcrumb-item"><a href="./ulist.html">List of Users</a></li>
 
                                 </ol>
                                 <div class="clearfix"></div>
@@ -174,8 +184,13 @@
                                 <div class="card-box">
                                     <div class="form-horizontal" role="form">
                                         <div class="form-field">
-                                            <label for="username">Username:</label>
-                                            <input type="text" name="username" id="username" autocomplete="off">
+                                            <label for="userdd"></label>
+                                            <select id="userdd" value="userdd" name="userdd" class="chzn-select">
+                                                <option value="" selected>--search username--</option>
+                                                <option value="Niwaha Edwin">A</option>
+                                                <option value="Nabaasa Faith">B</option>
+                                                <option value="Namanya Esther">C</option>
+                                            </select>
                                             <small></small>
                                         </div>
 
@@ -242,7 +257,7 @@
                                     </div>
 
                                     <div class="mb-3">
-                                        <input type="submit" value="Register" class="btn btn-primary d-block w-100 mt-3"
+                                        <input type="submit" value="Update" class="btn btn-primary d-block w-100 mt-3"
                                             style="height: 47px;">
                                     </div>
                                     <!-- <hr style="border: 5px solid green; border-radius: 5px;"> -->
@@ -268,6 +283,16 @@
         <!-- End footer -->
     </div>
     <!-- END wrapper -->
+    <script>
+        var select = document.getElementById('userdd');
+        var input = document.getElementById('username');
+        select.onchange = function() {
+            input.value = select.value;
+        }
+        </script>
+        <!-- js validation -->
+            <script src="../register/js/app_amend.js"></script>
+
 </body>
 
 </html>
