--- a/users/add copy.html
+++ b/users/add copy.html
@@ -575,9 +575,9 @@
     <!-- End Important for searhable dropdwn-->
 
     <script src="../assets/js/modernizr.min.js"></script>
-    <script src="../register/js/app.js"></script>
+    <script src="../users/js/app.js"></script>
+    
     <!-- Validate image -->
-
     <script>
         Filevalidation = () => {
             const fi = document.getElementById('file');
