--- a/header.html
+++ b/header.html
@@ -3,18 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../assets/img/favicons/favicon-32x32.png">
-    <link href="../plugins/switchery/switchery.min.css" rel="stylesheet" />
-    <link href="../plugins/morris/morris.css" rel="stylesheet">
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../assets/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="../assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../Style/chosen.css" /><!-- Important for searhable dropdwn-->
-    <link rel="stylesheet" href="../register/css/style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--load fontawesome cdn-->
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
@@ -35,7 +26,7 @@
                 <div id="sidebar-menu">
                     <ul>
                         <li>
-                            <a href="../dashboard_admin.html" class="waves-effect waves-primary">
+                            <a href="../dash_a.html" class="waves-effect waves-primary">
                                 <i class="ti-home"></i><span>Dashboard</span>
                                 <span class="badge badge-primary pull-right">#</span>
                             </a>
@@ -146,8 +137,8 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="./add.html" target="_self">New User</a></li>
-                                <li><a href="./ulist.html" target="_self">User List</a></li>
+                                <li><a href="../users/add.html" target="_self">New User</a></li>
+                                <li><a href="../users/ulist.html" target="_self">User List</a></li>
                             </ul>
                         </li>
 
@@ -183,32 +174,8 @@
     <!-- end content -->
     </div>
 </body>
-    <!-- Plugins  -->
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/popper.min.js"></script><!-- Popper for Bootstrap -->
-    <script src="../assets/js/bootstrap.min.js"></script>
-    <script src="../assets/js/detect.js"></script>
-    <script src="../assets/js/fastclick.js"></script>
-    <script src="../assets/js/jquery.slimscroll.js"></script>
-    <script src="../assets/js/jquery.blockUI.js"></script>
-    <script src="../assets/js/waves.js"></script>
-    <script src="../assets/js/wow.min.js"></script>
-    <script src="../assets/js/jquery.nicescroll.js"></script>
-    <script src="../assets/js/jquery.scrollTo.min.js"></script>
-    <script src="../plugins/switchery/switchery.min.js"></script>
-    <script src="../assets/js/jquery.core.js"></script>
-    <script src="../assets/js/modernizr.min.js"></script>
-    <script>
-        var resizefunc = [];
-    </script>
-
-    <!-- Begin Important for searhable dropdwn-->
-    <script src="../Scripts/chosen.jquery.js" type="text/javascript"></script>
-    <script
-        type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({ allow_single_deselect: true }); </script>
-    <!-- End Important for searhable dropdwn-->
 
     <!-- Custom main Js --- this stopped my Javascript validation and it too me more than two days to detect, i figured it out 0n 28th, July, 2022 07:11 am-->
-    <script src="../assets/js/jquery.app.js"></script>
+    <script src="../assets/js/jquery.app.js"></script> <!--feck link for the left navbar reponsive-->
 
 </html>
