--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
 
           <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
-            <li class="nav-item"><a class="nav-link" href="./dashboard_admin.html">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" href="./dash_a.html">Dashboard</a></li>
 
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button"
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
