--- a/users/add.html
+++ b/users/add.html
@@ -13,8 +13,9 @@
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../Style/chosen.css" /><!-- Important for searhable dropdwn-->
-    <link rel="stylesheet" href="../register/css/style.css">
+    <link href="../Style/chosen.css" rel="stylesheet" /><!-- Important for searhable dropdwn-->
+    <link href="../users/css/style.css" rel="stylesheet" />
+    
     <!--load fontawesome cdn-->
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
@@ -30,11 +31,10 @@
         </script>
     <script>
         $(function () {
-            $("#header").load("header.html");
-            $("#footer").load("footer.html");
+            $("#header").load("../header.html");
+            $("#footer").load("../footer.html");
         });
     </script>
-
 </head>
 
 <body class="fixed-left">
@@ -47,7 +47,7 @@
             <!-- LOGO -->
             <div class="topbar-left">
                 <div class="text-center">
-                    <a href="./add.html" class="logo"><i class="mdi mdi-radar"></i> <span>Karibu groceries</span></a>
+                    <a href="../dash_a.html" class="logo"><i class="mdi mdi-radar"></i> <span>Karibu groceries</span></a>
                 </div>
             </div>
 
@@ -270,8 +270,37 @@
         <!-- End footer -->
     </div>
     <!-- END wrapper -->
-    <script src="../register/js/app.js"></script>
+    <!-- Plugins  -->
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script><!-- Popper for Bootstrap -->
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/detect.js"></script>
+    <script src="../assets/js/fastclick.js"></script>
+    <script src="../assets/js/jquery.slimscroll.js"></script>
+    <script src="../assets/js/jquery.blockUI.js"></script>
+    <script src="../assets/js/waves.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/jquery.nicescroll.js"></script>
+    <script src="../assets/js/jquery.scrollTo.min.js"></script>
+    <script src="../plugins/switchery/switchery.min.js"></script>
+    <script src="../assets/js/jquery.core.js"></script>
+    <script src="../assets/js/modernizr.min.js"></script>
 
+
+    <!-- Custom main Js --- this stopped my Javascript validation and it too me more than two days to detect, i figured it out 0n 28th, July, 2022 07:11 am-->
+    <!-- <script src="../assets/js/jquery.app.js"></script>  -->
+    <script>
+        var resizefunc = [];
+    </script>
+
+    <!-- Begin Important for searhable dropdwn-->
+    <script src="../Scripts/chosen.jquery.js" type="text/javascript"></script>
+    <script
+        type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({ allow_single_deselect: true }); </script>
+    <!-- End Important for searhable dropdwn-->
+    
+<!-- validate form -->
+    <script src="../users/js/app.js"></script>
 </body>
 
 </html>
