--- a/users/amend.html
+++ b/users/amend.html
@@ -14,7 +14,7 @@
     <link href="../assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="../assets/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../Style/chosen.css" /><!-- Important for searhable dropdwn-->
-    <link rel="stylesheet" href="../register/css/style.css">
+    <link rel="stylesheet" href="../users/css/style.css">
     <!--load fontawesome cdn-->
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
@@ -30,8 +30,8 @@
         </script>
     <script>
         $(function () {
-            $("#header").load("header.html");
-            $("#footer").load("footer.html");
+            $("#header").load("../header.html");
+            $("#footer").load("../footer.html");
         });
     </script>
 <style>
@@ -291,8 +291,37 @@
         }
         </script>
         <!-- js validation -->
-            <script src="../register/js/app_amend.js"></script>
+            <script src="../users/js/app_amend.js"></script>
 
+     <!-- Plugins  -->
+     <script src="../assets/js/jquery.min.js"></script>
+     <script src="../assets/js/popper.min.js"></script><!-- Popper for Bootstrap -->
+     <script src="../assets/js/bootstrap.min.js"></script>
+     <script src="../assets/js/detect.js"></script>
+     <script src="../assets/js/fastclick.js"></script>
+     <script src="../assets/js/jquery.slimscroll.js"></script>
+     <script src="../assets/js/jquery.blockUI.js"></script>
+     <script src="../assets/js/waves.js"></script>
+     <script src="../assets/js/wow.min.js"></script>
+     <script src="../assets/js/jquery.nicescroll.js"></script>
+     <script src="../assets/js/jquery.scrollTo.min.js"></script>
+     <script src="../plugins/switchery/switchery.min.js"></script>
+     <script src="../assets/js/jquery.core.js"></script>
+     <script src="../assets/js/modernizr.min.js"></script>
+ 
+ 
+     <!-- Custom main Js --- this stopped my Javascript validation and it too me more than two days to detect, i figured it out 0n 28th, July, 2022 07:11 am-->
+     <!-- <script src="../assets/js/jquery.app.js"></script>  -->
+     <script>
+         var resizefunc = [];
+     </script>
+ 
+     <!-- Begin Important for searhable dropdwn-->
+     <script src="../Scripts/chosen.jquery.js" type="text/javascript"></script>
+     <script
+         type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({ allow_single_deselect: true }); </script>
+     <!-- End Important for searhable dropdwn-->
+               
 </body>
 
 </html>
