--- a/users/import.html
+++ b/users/import.html
@@ -30,8 +30,8 @@
         </script>
     <script>
         $(function () {
-            $("#header").load("header.html");
-            $("#footer").load("footer.html");
+            $("#header").load("../header.html");
+            $("#footer").load("../footer.html");
         });
     </script>
 
@@ -223,8 +223,37 @@
         <!-- End footer -->
     </div>
     <!-- END wrapper -->
-    <script src="../register/js/app.js"></script>
+    <!-- Plugins  -->
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/popper.min.js"></script><!-- Popper for Bootstrap -->
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/detect.js"></script>
+    <script src="../assets/js/fastclick.js"></script>
+    <script src="../assets/js/jquery.slimscroll.js"></script>
+    <script src="../assets/js/jquery.blockUI.js"></script>
+    <script src="../assets/js/waves.js"></script>
+    <script src="../assets/js/wow.min.js"></script>
+    <script src="../assets/js/jquery.nicescroll.js"></script>
+    <script src="../assets/js/jquery.scrollTo.min.js"></script>
+    <script src="../plugins/switchery/switchery.min.js"></script>
+    <script src="../assets/js/jquery.core.js"></script>
+    <script src="../assets/js/modernizr.min.js"></script>
 
+
+    <!-- Custom main Js --- this stopped my Javascript validation and it too me more than two days to detect, i figured it out 0n 28th, July, 2022 07:11 am-->
+    <!-- <script src="../assets/js/jquery.app.js"></script>  -->
+    <script>
+        var resizefunc = [];
+    </script>
+
+    <!-- Begin Important for searhable dropdwn-->
+    <script src="../Scripts/chosen.jquery.js" type="text/javascript"></script>
+    <script
+        type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({ allow_single_deselect: true }); </script>
+    <!-- End Important for searhable dropdwn-->
+    
+<!-- validate form -->
+    <script src="../users/js/app.js"></script>
 </body>
 
 </html>
