--- a/authentication/simple/login.html
+++ b/authentication/simple/login.html
@@ -59,8 +59,8 @@
             <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="../../index.html" style="color: white;">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html" style="color: white;">Log in</a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html" style="color: white;">Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="./login.html" style="color: white;">Log in</a></li>
+                <li class="nav-item"><a class="nav-link" href="./register.html" style="color: white;">Register</a></li>
               </ul>
             </div>
           </div>
@@ -76,7 +76,7 @@
                   <h5>Log in</h5>
                 </div>
                 <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">or</span> <span><a
-                      href="register.html">Create an account</a></span></div>
+                      href="./register.html">Create an account</a></span></div>
               </div>
               <!-- start reg form -->
               <form id="signup" class="form">
