--- a/authentication/simple/register.html
+++ b/authentication/simple/register.html
@@ -36,8 +36,8 @@
           <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item"><a class="nav-link" href="../../index.html" style="color: white;">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="login.html" style="color: white;">Log in</a></li>
-              <li class="nav-item"><a class="nav-link" href="register.html" style="color: white;">Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="./login.html" style="color: white;">Log in</a></li>
+              <li class="nav-item"><a class="nav-link" href="./register.html" style="color: white;">Register</a></li>
             </ul>
           </div>
         </div>
@@ -53,7 +53,7 @@
                   <h5>Register</h5>
                 </div>
                 <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">Already have an account?</span>
-                  <span><a href="/authentication/simple/login.html">Login</a></span></div>
+                  <span><a href="./login.html">Login</a></span></div>
                 <hr>
               </div>
               <!-- start reg form -->
