--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
           </ul>
 
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="./authentication/simple/login.html">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">Register</a></li>
+            
+            <!-- <li class="nav-item"><a class="nav-link" href="./authentication/simple/login.html"></a></li> -->
+            <a class="nav-link" href="./authentication/simple/login.html"> <i class='fa-solid fa-lock' style='color: white'></i> LOGIN </a>
           </ul>
         </div>
       </div>
