--- a/dash_a.html
+++ b/dash_a.html
@@ -41,6 +41,7 @@
             $("#footer").load("./footer.html");
         });
     </script>
+    <link rel="stylesheet/css" href="./header.html" />
 </head>
 
 <body class="fixed-left">
