--- a/dash_a.html
+++ b/dash_a.html
@@ -29,19 +29,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--load fontawesome cdn-->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- include header.html -->
-    <!-- source-- https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-        </script>
-    <script>
-        $(function () {
-            $("#header").load("./header.html");
-            $("#footer").load("./footer.html");
-        });
-    </script>
-    <link rel="stylesheet/css" href="./header.html" />
 </head>
 
 <body class="fixed-left">
@@ -139,7 +134,156 @@
         </div>
         <!-- Top Bar End -->
         <!-- ========== Left Sidebar Start ========== Pro-->
-        <div id="header" class="left side-menu">
+
+        <div class="left side-menu">
+            <div class="sidebar-inner slimscrollleft">
+                <!--- Divider -->
+                <div id="sidebar-menu">
+                    <ul>
+                        <li>
+                            <a href="./dash_a.html" class="waves-effect waves-primary">
+                                <i class="ti-home"></i><span>Dashboard</span>
+                                <span class="badge badge-primary pull-right">#</span>
+                            </a>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary"><i
+                                    class="ti-shopping-cart-full"></i><span> Sales </span> <span
+                                    class="menu-arrow"></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">New Sales</a></li>
+                                <li><a href="#" target="_self">Sales List</a></li>
+                                <li><a href="#" target="_self">New Sales Return</a></li>
+                                <li><a href="#" target="_self">Sales Return List</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="ti-id-badge"></i> <span>Customers </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">New Customers</a></li>
+                                <li><a href="#" target="_self">Customers List</a></li>
+                                <li><a href="#" target="_self">Import Customers</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa-solid fa-cash-register"></i> <span> Purchase </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">New Purchase</a></li>
+                                <li><a href="#" target="_self">Purchase List</a></li>
+                                <li><a href="#" target="_self">New Purchase Return</a></li>
+                                <li><a href="#" target="_self">Purchase Return</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa-solid fa-store"></i> <span> Suppliers </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">New Suppliers</a></li>
+                                <li><a href="#" target="_self">Suppliers List</a></li>
+                                <li><a href="#" target="_self">Import Suppliers</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa fa-list-alt"></i> <span> Items </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">New Item</a></li>
+                                <li><a href="#" target="_self">Items List</a></li>
+                                <li><a href="#" target="_self">New Category</a></li>
+                                <li><a href="#" target="_self">Categories List</a></li>
+                                <li><a href="#" target="_self">New Brand</a></li>
+                                <li><a href="#" target="_self">Brands List</a></li>
+                                <li><a href="#" target="_self">Print Labels</a></li>
+                                <li><a href="#" target="_self">Import Items</a></li>
+                            </ul>
+                        </li>
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fas fa-money-bill-alt"></i> <span> Expenses </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">New Expense</a></li>
+                                <li><a href="#" target="_self">Expenses List</a></li>
+                                <li><a href="#" target="_self">New Category</a></li>
+                                <li><a href="#" target="_self">Categories List</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa fa-bar-chart"></i> <span> Reports </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">Profit & Loss Reports</a></li>
+                                <li><a href="#" target="_self">Purchase Report</a></li>
+                                <li><a href="#" target="_self">Purchase Return Report</a></li>
+                                <li><a href="#" target="_self">Purchase Payments Report</a></li>
+                                <li><a href="#" target="_self">Items Sales Report</a></li>
+                                <li><a href="#" target="_self">Items Purchase Report</a></li>
+                                <li><a href="#" target="_self">Sales Report</a></li>
+                                <li><a href="#" target="_self">Sales Return Report</a></li>
+                                <li><a href="#" target="_self">Sales Payment Report</a></li>
+                                <li><a href="#" target="_self">Stock Report</a></li>
+                                <li><a href="#" target="_self">Expense Report</a></li>
+                                <li><a href="#" target="_self">Expired Items Report</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa fa-users"></i> <span> Users </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="./users/add.html" target="_self">New User</a></li>
+                                <li><a href="./users/ulist.html" target="_self">User List</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary"><i
+                                    class="ti-settings"></i><span> Settings </span> <span class="menu-arrow"></span></a>
+                            <ul class="list-unstyled">
+                                <li><a href="#" target="_self">Comapany Profile</a></li>
+                                <li><a href="#" target="_self">Units List</a></li>
+                                <li><a href="#" target="_self">Payment Types</a></li>
+                                <li><a href="#" target="_self">Currency List</a></li>
+                                <li><a href="#" target="_self">Change Password</a></li>
+                                <li><a href="#" target="_self">Database Backup</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="fa fa-question-circle"></i> <span> Help </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="clearfix"></div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
         </div>
         <!-- ========== Left Sidebar End ========== Pro-->
 
@@ -290,8 +434,13 @@
                 </div>
 
                 <div class="row">
-                    <!-- content removed -->
-                </div>
+                    <footer class="footer">
+                        &copy; 2022 - <span class="hide-phone">
+                            <asp:Label ID="Labelyear" runat="server" style="color: #0033CC; font-style: italic; font-weight: 700">
+                            </asp:Label> Karibu groceries - <a href="http://www.perpetualict.com" target="_blank">crafted by <img
+                                    src="./images/footer_logo.png" height="20" width="20" /></a>
+                        </span> | All Rights Reserved
+                    </footer>                </div>
                 <!-- end row -->
 
             </div>
@@ -332,9 +481,11 @@
     <script
         type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({ allow_single_deselect: true }); </script>
     <!-- End Important for searhable dropdwn-->
-    
+    <!--for making the left nav responsive-->
+    <script src="./assets/js/jquery.app.js"></script>
+
 <!-- validate form -->
-    <script src="../users/js/app.js"></script>
+    <script src="./users/js/app.js"></script>
     <script>
         var resizefunc = [];
     </script>
@@ -351,6 +502,7 @@
 
         <!-- Page js  -->
         <script src="./assets/pages/jquery.dashboard.js"></script>
+        
     <script type="text/javascript">
         jQuery(document).ready(function($) {
             $('.counter').counterUp({
