--- a/authentication/simple/login.html
+++ b/authentication/simple/login.html
@@ -4,36 +4,52 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-  <!-- ===============================================-->
-  <!--    Document Title-->
-  <!-- ===============================================-->
   <title>Karibu Groceries | Login</title>
 
-  <!-- ===============================================-->
   <!--    Favicons-->
   <!-- ===============================================-->
-  <link rel="apple-touch-icon" sizes="180x180" href="../../assets/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/favicons/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../assets/img/favicons/apple-touch-icon1.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
+  <!--title logo-->
   <link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="https://prium.github.io/falcon/v3.4.0/assets/img/favicons/manifest.json">
+
   <meta name="msapplication-TileImage" content="../../assets/img/favicons/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
+  <script src="../../assets/js/config.js"></script>
+  <script src="../../vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
 
-  <!-- ===============================================-->
   <!--    Stylesheets-->
-  <!-- ===============================================-->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap"
-    rel="stylesheet">
+  <!-- =============================================== /vendors/swiper/swiper-bundle.min.css-->
+  <link href="../../vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="../../vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
   <link href="../../assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="../../assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <link href="../../assets/css/theme.min.css" rel="stylesheet" id="style-default"> <!--has controls for bg image-->
   <link href="../../assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="../../assets/css/user.min.css" rel="stylesheet" id="user-style-default">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./reg.css" /> -->
   <link rel="stylesheet" href="./css/style.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3E3XZ7RL7"></script>
+
+  <!--load fontawesome cdn-->
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+  <style>
+    body {
+      background-image: url(../../assets/images/soybeans/soyb1.jpg);
+      background-position: center;      
+    }
+  </style>
 </head>
 
 <body>
@@ -50,22 +66,49 @@
           container.classList.add('container-fluid');
         }
       </script>
-      <!--start navbar-->
-          <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar bg-dark">   
-          <div class="container"><a class="navbar-brand" href="../../index.html"><span
-                class="text-white dark__text-white">Karibu Groceries</span></a><button class="navbar-toggler collapsed"
-              type="button" data-bs-toggle="collapse" data-bs-target="#navbarStandard" aria-controls="navbarStandard"
-              aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="../../index.html" style="color: white;">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="./login.html" style="color: white;">Log in</a></li>
-                <li class="nav-item"><a class="nav-link" href="./register.html" style="color: white;">Register</a></li>
-              </ul>
+
+    <!-- start nav -->
+      <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark"
+      data-navbar-darken-on-scroll="data-navbar-darken-on-scroll">
+      <div class="container-fluid">
+        <a href="../../index.html" class="navbar-brand"><span class="text-white dark__text-white">Karibu
+            Groceries</span></a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav">
+            <a href="../../index.html" class="nav-item nav-link active">Home</a>
+            <a href="../../landing/collections.html" class="nav-item nav-link">Shop</a>
+            <div class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Best Sellers</a>
+              <div class="dropdown-menu">
+                <a href="../../landing/collect_beans.html" class="dropdown-item">Beans</a>
+                <a href="../../landing/collect_maize.html" class="dropdown-item">Grain Maize</a>
+                <a href="../../landing/collect_peas.html" class="dropdown-item">Cow peas</a>
+                <a href="../../landing/collect_nuts.html" class="dropdown-item">G-nuts</a>
+                <a href="../../landing/collect_soyb.html" class="dropdown-item">Soybeans</a>
+              </div>
             </div>
+            <a href="../../landing/deals.html" class="nav-item nav-link">Deal of the Day</a>
+            <div class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+              <div class="dropdown-menu">
+                <a href="../../landing/about.html" class="dropdown-item">About Us</a>
+                <a href="../../landing/blog.html" class="dropdown-item">Blog</a>
+              </div>
+            </div>
+            <a href="../../landing/contact.html" class="nav-item nav-link">Contact Us</a>
           </div>
-        </nav>
-        <!--end navbar-->
+          <div class="navbar-nav ms-auto">
+            <!-- <a href="#" class="nav-item nav-link">Login</a> -->
+            <a class="nav-link" href="../../authentication/simple/login.html"> <i class='fa-solid fa-lock'
+                style='color: red'></i> Login </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- end nav -->
 
       <div class="row flex-center min-vh-100 py-6">
         <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
@@ -95,9 +138,10 @@
                 <div class="form-field">
                   <label for="password">Password:</label>
                   <input type="password" name="password" id="password" autocomplete="off">
-                  <small><a href="  http://127.0.0.1:5500/authentication/simple/forgot-password.html">Forgot Password?</a></small>
+                  <small><a href="  http://127.0.0.1:5500/authentication/simple/forgot-password.html">Forgot
+                      Password?</a></small>
                 </div>
-                
+
                 <hr>
                 <div class="mb-3">
                   <input type="submit" value="LOGIN" class="btn btn-primary d-block w-100 mt-3">
@@ -113,27 +157,27 @@
   <!--    End of Main Content-->
   <!-- ===============================================-->
 
-    <!-- <section> begin ============================-->
-      <section class="py-0 bg-dark light">
-        <div>
-          <hr class="my-0 text-600 opacity-25" />
-          <div class="container py-3">
-            <div class="row justify-content-between fs--1">
-              <div class="col-12 col-sm-auto text-center">
-                <p class="mb-0 text-600 opacity-85">2022 &copy; Karibu Groceries Ltd - <a a class="text-white opacity-85"
-                    href="https://perpetualict.com/" target="_blank">crafted by Edwin Niwaha</a> | All Rights
-                  Reserved
-                  <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" />
-                </p>
-              </div>
-              <div class="col-12 col-sm-auto text-center">
-                <p class="mb-0 text-600 opacity-85"></p>
-              </div>
-            </div>
+  <!-- <section> begin ============================-->
+  <section class="py-0 bg-dark light">
+    <div>
+      <hr class="my-0 text-600 opacity-25" />
+      <div class="container py-3">
+        <div class="row justify-content-between fs--1">
+          <div class="col-12 col-sm-auto text-center">
+            <p class="mb-0 text-600 opacity-85">2022 &copy; Karibu Groceries Ltd - <a a class="text-white opacity-85"
+                href="https://perpetualict.com/" target="_blank">crafted by Edwin Niwaha</a> | All Rights
+              Reserved
+              <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" />
+            </p>
           </div>
-        </div><!-- end of .container-->
-      </section><!-- <section> close ============================-->
-      <!-- ============================================-->
+          <div class="col-12 col-sm-auto text-center">
+            <p class="mb-0 text-600 opacity-85"></p>
+          </div>
+        </div>
+      </div>
+    </div><!-- end of .container-->
+  </section><!-- <section> close ============================-->
+  <!-- ============================================-->
   <!-- ===============================================-->
   <!--    JavaScripts-->
   <!-- ===============================================-->
