--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicons/favicon-32x32.png">
   <!--title logo-->
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicons/favicon-16x16.png">
-  
+
   <meta name="msapplication-TileImage" content="./assets/img/favicons/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
   <script src="./assets/js/config.js"></script>
@@ -28,7 +28,7 @@
   <link href="./vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="./vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
   <link href="./assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default"> <!--has controls for bg image-->
   <link href="./assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="./assets/css/user.min.css" rel="stylesheet" id="user-style-default">
 
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <style>
     .carousel-inner {
       height: 500px;
@@ -55,156 +56,55 @@
     }
   </style>
 
-  <script type="text/javascript">
-    function registration() {
-
-      var name = document.getElementById("t1").value;
-      var email = document.getElementById("t2").value;
-      var uname = document.getElementById("t3").value;
-      var pwd = document.getElementById("t4").value;
-      var cpwd = document.getElementById("t5").value;
-
-      //email id expression code
-      var pwd_expression = /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-])/;
-      var letters = /^[A-Za-z]+$/;
-      var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-
-      if (name == '') {
-        alert('Please enter your name');
-        name.style.border = "5px solid red";
-        name.focus();
-        return false;
-
-      }
-      else if (!letters.test(name)) {
-        alert('Name field required only alphabet characters');
-      }
-      else if (email == '') {
-        alert('Please enter your user email id');
-      }
-      else if (!filter.test(email)) {
-        alert('Invalid email');
-      }
-      else if (uname == '') {
-        alert('Please enter the user name.');
-      }
-      else if (!letters.test(uname)) {
-        alert('User name field required only alphabet characters');
-      }
-      else if (pwd == '') {
-        alert('Please enter Password');
-      }
-      else if (cpwd == '') {
-        alert('Enter Confirm Password');
-      }
-      else if (!pwd_expression.test(pwd)) {
-        alert('Upper case, Lower case, Special character and Numeric letter are required in Password filed');
-      }
-      else if (pwd != cpwd) {
-        alert('Password not Matched');
-      }
-      else if (document.getElementById("t5").value.length < 6) {
-        alert('Password minimum length is 6');
-      }
-      else if (document.getElementById("t5").value.length > 12) {
-        alert('Password max length is 12');
-      }
-      else {
-        alert('Thank You for Registration & You are Redirecting to Website');
-        // Redirecting to other page or webste code. 
-        window.location = "https://tutorial.eyehunts.com//";
-      }
-    }
-  </script>
 </head>
 
 <body>
   <!--    Main Content-->
   <!-- ===============================================-->
   <main class="main" id="top">
+    <!-- start nav -->
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
     <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark"
       data-navbar-darken-on-scroll="data-navbar-darken-on-scroll">
-      <div class="container"><a class="navbar-brand" href="./index.html"><span
-            class="text-white dark__text-white">Karibu Groceries</span></a><button class="navbar-toggler collapsed"
-          type="button" data-bs-toggle="collapse" data-bs-target="#navbarStandard" aria-controls="navbarStandard"
-          aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
-
-          <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
-            <li class="nav-item"><a class="nav-link" href="./dash_a.html">Dashboard</a></li>
-
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" role="button"
-                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                id="documentations">Documentation</a>
-              <div class="dropdown-menu dropdown-menu-card border-0 mt-0" aria-labelledby="documentations">
-                <div class="bg-white dark__bg-1000 rounded-3 py-2"><a class="dropdown-item link-600 fw-medium"
-                    href="#">downloads</a></div>
+      <div class="container-fluid">
+        <a href="./index.html" class="navbar-brand"><span class="text-white dark__text-white">Karibu
+            Groceries</span></a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav">
+            <a href="./index.html" class="nav-item nav-link active">Home</a>
+            <a href="./landing/collections.html" class="nav-item nav-link">Shop</a>
+            <div class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Best Sellers</a>
+              <div class="dropdown-menu">
+                <a href="./landing/collect_beans.html" class="dropdown-item">Beans</a>
+                <a href="./landing/collect_maize.html" class="dropdown-item">Grain Maize</a>
+                <a href="./landing/collect_peas.html" class="dropdown-item">Cow peas</a>
+                <a href="./landing/collect_nuts.html" class="dropdown-item">G-nuts</a>
+                <a href="./landing/collect_soyb.html" class="dropdown-item">Soybeans</a>
               </div>
-            </li>
-          </ul>
-
-          <ul class="navbar-nav ms-auto">
-            
-            <!-- <li class="nav-item"><a class="nav-link" href="./authentication/simple/login.html"></a></li> -->
-            <a class="nav-link" href="./authentication/simple/login.html"> <i class='fa-solid fa-lock' style='color: white'></i> LOGIN </a>
-          </ul>
+            </div>
+            <a href="./landing/deals.html" class="nav-item nav-link">Deal of the Day</a>
+            <div class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+              <div class="dropdown-menu">
+                <a href="./landing/about.html" class="dropdown-item">About Us</a>
+                <a href="./landing/blog.html" class="dropdown-item">Blog</a>
+              </div>
+            </div>
+            <a href="./landing/contact.html" class="nav-item nav-link">Contact Us</a>
+          </div>
+          <div class="navbar-nav ms-auto">
+            <!-- <a href="#" class="nav-item nav-link">Login</a> -->
+            <a class="nav-link" href="./authentication/simple/login.html"> <i class='fa-solid fa-lock'
+                style='color: red'></i> Login </a>
+          </div>
         </div>
       </div>
     </nav>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-body p-4">
-            <div class="row text-start justify-content-between align-items-center mb-2">
-              <div class="col-auto">
-                <h5 id="modalLabel">Register</h5>
-              </div>
-              <div class="col-auto">
-                <p class="fs--1 text-600 mb-0">Have an account? <a href="./authentication/simple/login.html">Login</a>
-                </p>
-              </div>
-            </div>
-            <form>
-              <div class="mb-3">
-                <!-- create account div -->
-                <div class="login">
-                  <table cellspacing="2" align="center" cellpadding="8" border="0">
-                    <tr>
-                      <td align="right">Fulls Names :</td>
-                      <td><input type="text" placeholder="Enter user here" id="t1" class="form-control" /></td>
-                    </tr>
-                    <tr>
-                      <td align="right">Email ID :</td>
-                      <td><input type="text" placeholder="Enter Email ID here" id="t2" class="form-control" /></td>
-                    </tr>
-                    <tr>
-                      <td align="right">Username :</td>
-                      <td><input type="text" placeholder="Enter Username here" id="t3" class="form-control" /></td>
-                    </tr>
-                    <tr>
-                      <td align="right">Password :</td>
-                      <td><input type="password" placeholder="Enter Password here" id="t4" class="form-control" /></td>
-                    </tr>
-                    <tr>
-                      <td align="right">Confirm Password :</td>
-                      <td><input type="password" placeholder="Enter Password here" id="t5" class="form-control" /></td>
-                    </tr>
-                    <tr>
-                  </table>
-                </div>
-                <!-- create account box ending here.. -->
-              </div>
-              <!-- Main div ending here... -->
-              <input type="submit" value="Create Account" class="btn btn-primary d-block w-100 mt-3"
-                onclick="registration()" />
-          </div>
-          </form>
-
-        </div>
-      </div>
-    </div>
-    </div>
+    <!-- end nav -->
 
     <!-- ============================================-->
     <!-- <section> begin ============================-->
@@ -226,6 +126,7 @@
         </div>
       </div><!-- end of .container-->
     </section><!-- <section> close ============================-->
+
     <!--Start of carousel-->
     <div class="carousel-inner" role="listbox">
       <div class="row">
@@ -449,7 +350,8 @@
   <script src="./vendors/lodash/lodash.min.js"></script>
   <script src="./vendors/list.js/list.min.js"></script>
   <script src="./assets/js/theme.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
@@ -457,7 +359,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 
   <script>
     var isRTL = JSON.parse(localStorage.getItem('isRTL'));
