cart and checkout

--- a/authentication/simple/forgot-password.html
+++ b/authentication/simple/forgot-password.html
@@ -81,17 +81,6 @@
             <a href="../../index.html" class="nav-item nav-link active">Home</a>
             <a href="../../landing/collections.html" class="nav-item nav-link">Shop</a>
             <div class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Best Sellers</a>
-              <div class="dropdown-menu">
-                <a href="../../landing/collect_beans.html" class="dropdown-item">Beans</a>
-                <a href="../../landing/collect_maize.html" class="dropdown-item">Grain Maize</a>
-                <a href="../../landing/collect_peas.html" class="dropdown-item">Cow peas</a>
-                <a href="../../landing/collect_nuts.html" class="dropdown-item">G-nuts</a>
-                <a href="../../landing/collect_soyb.html" class="dropdown-item">Soybeans</a>
-              </div>
-            </div>
-            <a href="../../landing/deals.html" class="nav-item nav-link">Deal of the Day</a>
-            <div class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
               <div class="dropdown-menu">
                 <a href="../../landing/about.html" class="dropdown-item">About Us</a>
@@ -116,7 +105,8 @@
           <div class="card-body p-4 p-sm-5">
             <h5 class="mb-0">Forgot your password?</h5><small>Enter your email and we'll send you a reset
               link.</small>
-            <form class="mt-4"><input class="form-control" type="email" placeholder="Email address" />
+            <form class="mt-4">
+              <input class="form-control" type="email" placeholder="Email address" required />
               <div class="mb-3"></div><button class="btn btn-primary d-block w-100 mt-3" type="submit"
                 name="submit">Send reset link</button>
             </form><a class="fs--1 text-600" href="../../authentication/simple/reset-password.html">I can't recover my account using this page<span
