--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <link href="./vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="./vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
   <link href="./assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default"> <!--has controls for bg image-->
+  <link href="./assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <!--has controls for bg image-->
   <link href="./assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="./assets/css/user.min.css" rel="stylesheet" id="user-style-default">
 
@@ -76,17 +77,6 @@
           <div class="navbar-nav">
             <a href="./index.html" class="nav-item nav-link active">Home</a>
             <a href="./landing/collections.html" class="nav-item nav-link">Shop</a>
-            <div class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Best Sellers</a>
-              <div class="dropdown-menu">
-                <a href="./landing/collect_beans.html" class="dropdown-item">Beans</a>
-                <a href="./landing/collect_maize.html" class="dropdown-item">Grain Maize</a>
-                <a href="./landing/collect_peas.html" class="dropdown-item">Cow peas</a>
-                <a href="./landing/collect_nuts.html" class="dropdown-item">G-nuts</a>
-                <a href="./landing/collect_soyb.html" class="dropdown-item">Soybeans</a>
-              </div>
-            </div>
-            <a href="./landing/deals.html" class="nav-item nav-link">Deal of the Day</a>
             <div class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
               <div class="dropdown-menu">
