--- a/landing/cart.html
+++ b/landing/cart.html
@@ -25,8 +25,8 @@
       <h2>Karibu Groceries | Shop</h2>
     </a>
     <div class="navbar-nav">
-      <a href="../../index.html" class="nav-item nav-link active">Home</a> |
-      <a class="nav-link" href="../../authentication/simple/login.html"> <i class='fa-solid fa-lock'
+      <a href="../index.html" class="nav-item nav-link active">Home</a> |
+      <a class="nav-link" href="../authentication/simple/login.html"> <i class='fa-solid fa-lock'
           style='color: red'></i> Login </a>
     </div>
 
