--- a/landing/collections.html
+++ b/landing/collections.html
@@ -18,14 +18,15 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body style="background-color:rgb(0, 191, 255)">
+    <!-- start navbar -->
     <div class="navbar">
         <a href="./collections.html">
             <h2>Karibu Groceries | Shop</h2>
         </a>
         <div class="navbar-nav">
-            <a href="../../index.html" class="nav-item nav-link active">Home</a> |
-            <a class="nav-link" href="../../authentication/simple/login.html"> <i class='fa-solid fa-lock'
+            <a href="../index.html" class="nav-item nav-link active">Home</a> |
+            <a class="nav-link" href="../authentication/simple/login.html"> <i class='fa-solid fa-lock'
                     style='color: red'></i> Login </a>
         </div>
         <a href="./cart.html">
@@ -36,6 +37,7 @@
         </a>
 
     </div>
+<!-- end nabar -->
 
     <div class="shop" id="shop">
     </div>
