--- a/authentication/simple/reset-password.html
+++ b/authentication/simple/reset-password.html
@@ -28,7 +28,8 @@
   <link href="../../vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="../../vendors/overlayscrollbars/OverlayScrollbars.min.css" rel="stylesheet">
   <link href="../../assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
-  <link href="../../assets/css/theme.min.css" rel="stylesheet" id="style-default"> <!--has controls for bg image-->
+  <link href="../../assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <!--has controls for bg image-->
   <link href="../../assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
   <link href="../../assets/css/user.min.css" rel="stylesheet" id="user-style-default">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -43,11 +44,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+
   <style>
     body {
       background-image: url(../../assets/images/soybeans/soyb1.jpg);
-      background-position: center;      
+      background-position: center;
     }
   </style>
 </head>
@@ -67,53 +68,42 @@
         }
       </script>
 
-    <!-- start nav -->
+      <!-- start nav -->
       <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark"
-      data-navbar-darken-on-scroll="data-navbar-darken-on-scroll">
-      <div class="container-fluid">
-        <a href="../../index.html" class="navbar-brand"><span class="text-white dark__text-white">Karibu
-            Groceries</span></a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="navbar-nav">
-            <a href="../../index.html" class="nav-item nav-link active">Home</a>
-            <a href="../../landing/collections.html" class="nav-item nav-link">Shop</a>
-            <div class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Best Sellers</a>
-              <div class="dropdown-menu">
-                <a href="../../landing/collect_beans.html" class="dropdown-item">Beans</a>
-                <a href="../../landing/collect_maize.html" class="dropdown-item">Grain Maize</a>
-                <a href="../../landing/collect_peas.html" class="dropdown-item">Cow peas</a>
-                <a href="../../landing/collect_nuts.html" class="dropdown-item">G-nuts</a>
-                <a href="../../landing/collect_soyb.html" class="dropdown-item">Soybeans</a>
+        data-navbar-darken-on-scroll="data-navbar-darken-on-scroll">
+        <div class="container-fluid">
+          <a href="../../index.html" class="navbar-brand"><span class="text-white dark__text-white">Karibu
+              Groceries</span></a>
+          <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+              <a href="../../index.html" class="nav-item nav-link active">Home</a>
+              <a href="../../landing/collections.html" class="nav-item nav-link">Shop</a>
+              <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                <div class="dropdown-menu">
+                  <a href="../../landing/about.html" class="dropdown-item">About Us</a>
+                  <a href="../../landing/blog.html" class="dropdown-item">Blog</a>
+                </div>
               </div>
+              <a href="../../landing/contact.html" class="nav-item nav-link">Contact Us</a>
             </div>
-            <a href="../../landing/deals.html" class="nav-item nav-link">Deal of the Day</a>
-            <div class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-              <div class="dropdown-menu">
-                <a href="../../landing/about.html" class="dropdown-item">About Us</a>
-                <a href="../../landing/blog.html" class="dropdown-item">Blog</a>
-              </div>
+            <div class="navbar-nav ms-auto">
+              <!-- <a href="#" class="nav-item nav-link">Login</a> -->
+              <a class="nav-link" href="../../authentication/simple/login.html"> <i class='fa-solid fa-lock'
+                  style='color: red'></i> Login </a>
             </div>
-            <a href="../../landing/contact.html" class="nav-item nav-link">Contact Us</a>
-          </div>
-          <div class="navbar-nav ms-auto">
-            <!-- <a href="#" class="nav-item nav-link">Login</a> -->
-            <a class="nav-link" href="../../authentication/simple/login.html"> <i class='fa-solid fa-lock'
-                style='color: red'></i> Login </a>
           </div>
         </div>
-      </div>
-    </nav>
-    <!-- end nav -->
+      </nav>
+      <!-- end nav -->
 
-    <div class="row flex-center min-vh-100 py-6">
-      <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
-        <div class="card">
-          <div class="card-body p-4 p-sm-5">
+      <div class="row flex-center min-vh-100 py-6">
+        <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
+          <div class="card">
+            <div class="card-body p-4 p-sm-5">
 
               <div class="row flex-between-center mb-2">
                 <div class="col-auto">
@@ -122,14 +112,20 @@
                 <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">or</span> <span><a
                       href="./login.html">Login</a></span></div>
               </div>
-            <form class="mt-3">
-              <div class="mb-3"><label class="form-label"></label><input class="form-control" type="password" placeholder="New Password" /></div>
-              <div class="mb-3"><input class="form-control" type="password" placeholder="Confirm Password" /></div><button class="btn btn-primary d-block w-100 mt-3" type="submit" name="submit">Set password</button>
-            </form>
+              <form class="mt-3" is="reset">
+                <div class="mb-3"><label class="form-label"></label>
+                  <input class="form-control" type="password" id="pwd1" name="pwd1" placeholder="New Password" required />
+                </div>
+                <div class="mb-3">
+                  <input class="form-control" type="password" id="pwd2" name="pwd2" placeholder="Confirm Password" required />
+                </div>
+                <button class="btn btn-primary d-block w-100 mt-3" type="submit" name="submit"
+                  onsubmit="validatePassword()">Set password</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
     </div>
   </main><!-- ===============================================-->
@@ -187,6 +183,27 @@
       userLinkRTL.setAttribute('disabled', true);
     }
   </script>
+  <script>
+    function validatePassword() {
+      var p = document.getElementById('pwd1').value,
+        errors = [];
+      if (p.length < 8) {
+        errors.push("Your password must be at least 8 characters");
+      }
+      if (p.search(/[a-z]/i) < 0) {
+        errors.push("Your password must contain at least one letter.");
+      }
+      if (p.search(/[0-9]/) < 0) {
+        errors.push("Your password must contain at least one digit.");
+      }
+      if (errors.length > 0) {
+        alert(errors.join("\n"));
+        return false;
+      }
+      return true;
+    }
+  </script>
+
 </body>
 
 </html>
